fixed navigation alignment

--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@
 * {
   margin: 0px;
   padding: 0px;
-
   font-family: 'Thasadith', sans-serif;
+  font-weight: bold;
   background: transparent;
   position: relative;
 }
